--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Practice for learn Asynchronism in JavaScript",
   "main": "index.js",
   "scripts": {
-    "callback": "node src/callback.js"
+    "callback": "node src/callbacks.js"
   },
   "author": "Mauricio Alejandro Gonzalez Falcon",
   "license": "MIT"
