--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "callback": "node src/callbacks.js"
   },
   "author": "Mauricio Alejandro Gonzalez Falcon",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
