--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "callback": "node src/callbacks.js",
-    "callback:challenge": "node src/callbacks.js"
+    "callback:challenge": "node src/challenge.js"
   },
   "author": "Mauricio Alejandro Gonzalez Falcon",
   "license": "MIT",
