--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "callback": "node src/callbacks.js",
-    "callback:challenge": "node src/challenge.js"
+    "callback:challenge": "node src/challenge.js",
+    "promise": "node src/promise.js/"
   },
   "author": "Mauricio Alejandro Gonzalez Falcon",
   "license": "MIT",
