adding folders, challenge.js created, promise folder created

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "callback": "node src/callbacks.js",
-    "callback:challenge": "node src/challenge.js",
-    "promise": "node src/promise.js/"
+    "callback:challenge": "node src/callbacks/challenge.js",
+    "promise": "node src/promises/promises.js",
+    "promise:challenge": "node src/promises/challenge.js"
   },
   "author": "Mauricio Alejandro Gonzalez Falcon",
   "license": "MIT",
