--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "callback:challenge": "node src/callbacks/challenge.js",
     "promise": "node src/promises/promises.js",
     "promise:challenge": "node src/promises/challenge.js",
-    "async": "node src/async_and_await/index.js"
+    "async": "node src/async_and_await/index.js",
+    "async:challenge": "node src/async_and_await/challenge.js"
   },
   "author": "Mauricio Alejandro Gonzalez Falcon",
   "license": "MIT",
